# ZenDNN-pytorch-plugin

./: .flake8  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  DESCRIPTION.md  DESCRIPTION_WEEKLY.md  LICENCE  README.md  README_ACCURACY.md  THIRD-PARTY-NOTICES  build.sh  license_header_check.py  manylinux_setup.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: PR_Notification.yml  zentorch_pr.yml  zentorch_pr_merged  zentorch_zendnnl_pr.yml  zentorch_zendnnl_pr_merged
benchmark/matmul/: test_bmm.py
benchmark/recsys/dlrmv2/: README.md  dataset.py  dlrm_model.py  main.py  model_loader.py  multihot_criteo.py  utils.py
benchmark/recsys/dlrmv2-mlperf/: README.md  config.json  prepare_env.sh  run_common.sh  run_local.sh  run_main.sh  setup_env_offline.sh  setup_env_server.sh  user.conf
benchmark/recsys/dlrmv2-mlperf/python/: backend.py  backend_pytorch_native.py  consumer.py  dataset.py  dlrm_model.py  items.py  multihot_criteo.py  runner.py
benchmark/recsys/dlrmv2-mlperf/tools/: accuracy-dlrm.py
benchmark/transformers/bert/: README.md  requirements.txt  run_tests_1-inst_VM_ZenDNN-510.sh  run_tests_M-inst_VM_ZenDNN-510.sh
benchmark/transformers/bert/bert_base_scripts/: run_bert_ds_mp.py
cmake/modules/: FindAMDBLIS.cmake  FindCPUkernels.cmake  FindZENDNN.cmake  FindZentorch.cmake  ZenDnnlFwkIntegrate.cmake  zendnn.cmake  zendnnl.cmake
docs/: zentorch_dynamic_qlinear.md  zentorch_fused_moe.md  zentorch_group_matmul.md
docs/vllm/gdn/: README.md  overview.md
docs/vllm/gdn/kernels/: causal_conv1d_fn.md  causal_conv1d_update.md  chunk_fwd_o.md  chunk_gated_delta_rule_fwd.md  chunk_gated_delta_rule_fwd_h.md  chunk_local_cumsum.md  chunk_scaled_dot_kkt_fwd.md  fused_post_conv_prep.md  fused_recurrent_gated_delta_rule_packed_decode.md  fused_sigmoid_gating_delta_rule_update.md  l2norm_fwd.md  recompute_w_u_fwd.md  rms_norm_gated.md  solve_tril.md
examples/: README.md  bert_example.py  bf16_llm_example.py  dlrm_example.py  dlrm_model.py  llama_bf16_example.py  llama_woq_example.py  requirements.txt  resnet_example.py
examples/quantization/: README.md
examples/quantization/LLM-Compressor/: da8w8_example.py  w4a16_example.py
examples/quantization/torchao/DLRM-v2/: README.md  _pack.py  custom_quantizers.py  quantize_dlrmv2.py
examples/quantization/torchao/LLM/: da8w8_example.py  w4a16_example.py
linter/: py_cpp_linter.sh  requirements.txt
scripts/: README.md  benchmarking_optimal_env_script.sh  benchmarking_optimal_env_setup.sh  dlrm_optimal_env_setup.sh  zentorch_env_setup.sh
src/cpu/cpp/: Bindings.cpp  CausalAttentionMask.cpp  Config.cpp  Config.h.in  Config.hpp.in  Conv.cpp  ConvUtils.hpp  DataPointerManager.hpp  DynamicQLinear.cpp  DynamicQLinear.hpp  Embed.cpp  EmbedBag.cpp  EmbedUtils.hpp  Embedding.cpp  Embedding.hpp  EmbeddingBag.cpp  EmbeddingUtils.hpp  EnvReader.hpp  FusedMoE.cpp  FusedMoE.hpp  Fused_EB_MLP.cpp  GDN_ops.cpp  GroupMatmul.cpp  GroupMatmul.hpp  Linear.cpp  Linear.hpp  MaskedMultiHeadAttention.cpp  Matmul.cpp  MatmulUtils.hpp  Memory.hpp  MoE.cpp  Ops.hpp  PagedAttention.cpp  PagedAttentionCommon.hpp  QLinear.cpp  QLinear.hpp  QLinearUtils.hpp  QuantEmbedBag.cpp  QuantEmbedBag.hpp  QuantEmbedUtils.hpp  (+26 more)
src/cpu/cpp/kernels/: zen_MaskedMultiHeadAttention.hpp  zen_MaskedMultiHeadAttention_512.cpp  zen_Sdpa.cpp  (+4 more)
test/: README.md  install_requirements.py  test_models.py  test_zendnn.py  test_zentorch.py  test_zentorch_llm.py  utils.py  zentorch_test_utils.py
test/llm_tests/: llm_utils.py  test_flash_attn_varlen.py  test_fused_rope_op.py  test_masked_mha.py  test_paged_attention.py
test/pre_trained_model_tests/: pre_trained_model_utils.py  test_bert.py  test_cnn.py
test/unittests/: quant_utils.py  unittest_utils.py
test/unittests/export_tests/: test_exp.py
test/unittests/miscellaneous_tests/: test_avx512_device.py  test_bf16_device.py  test_fp16_device.py  test_model_reload.py  test_zentorch_version.py
test/unittests/model_tests/: __init__.py  test_addmm.py  test_addmm_1dbias.py  test_addmm_1dbias_add.py  test_addmm_1dbias_gelu.py  test_addmm_1dbias_mul_add.py  test_addmm_1dbias_relu.py  test_addmm_1dbias_silu_mul.py  test_addmm_gelu.py  test_addmm_relu.py  test_attn_qkv_fusion.py  test_baddbmm.py  test_convolution.py  test_dynamic_qlinear.py  test_embedding.py  test_embedding_bag.py  test_fused_moe.py  test_group_embeded_ops_with_sum_ops.py  test_horizontal_embedding_bag_group.py  test_horizontal_embedding_bag_group_addmm_1dbias.py  test_horizontal_embedding_bag_group_addmm_1dbias_relu.py  test_horizontal_embedding_group.py  test_inplace_cat.py  test_linear.py  test_linear_binary.py  test_linear_binary_binary.py  test_linear_placeholder.py  test_linear_unary.py  test_linear_unary_binary.py  test_mini_mha.py  test_mm_bmm.py  test_mm_relu.py  test_mm_silu.py  test_mm_silu_mul.py  test_pattern_matcher.py  test_pattern_matcher_addmm_1dbias_silu_mul.py  test_qkv_fusion_linear.py  test_qlinear.py  test_qlinear_eltwise.py  test_qlinear_mul_add.py  (+12 more)
test/unittests/op_tests/: _pack.py  test_addmm.py  test_addmm_1dbias.py  test_addmm_1dbias_add.py  test_addmm_1dbias_mul_add.py  test_addmm_silu.py  test_addmm_silu_mul.py  test_attn_qkv_fusion.py  test_baddbmm.py  test_bmm.py  test_convolution.py  test_dynamic_qlinear.py  test_embedding.py  test_embedding_bag.py  test_embeg_pack_weight.py  test_fuse_index_mul_index_add_wrapper.py  test_group_matmul.py  test_horizontal_embedding_bag_group.py  test_horizontal_embedding_group.py  test_linear.py  test_matmul_direct.py  test_matmul_impl.py  test_matmul_tanh.py  test_mm.py  test_mm_silu.py  test_mm_silu_mul.py  test_prepare_4d_causal_attention_mask.py  test_qlinear.py  test_qlinear_eltwise.py  test_qlinear_mul_add.py  test_quant_embedding_bag.py  test_quant_embedding_bag_group.py  test_rms_norm.py  test_rope.py  test_weight_reorder_for_matmul_with_qlinear.py  test_woq_linear.py  test_woq_linear_asymmetric.py
test/unittests/quantization_tests/: test_quantization_flow.py  test_quantization_replacement.py
test/unittests/vllm_tests/: __init__.py  test_vllm_plugin.py
(+124 files in other folders)
